# si_person_object_maker

./: .gitignore  README.md  pyproject.toml
LICENSE/: LICENSE.txt  README.md  pyproject.toml
src/si_person/: data.py  person.py
src/si_person_maker/: person.py
tests/: test_person.py
